Fall back to java8